[gd_scene load_steps=2 format=3 uid="uid://bjp2bck62tl2m"]

[ext_resource type="Script" path="res://scripts/control_panel/control_panel.gd" id="1_rhl0v"]

[node name="ControlPanel" type="Window"]
title = "Control Panel - Toaster"
initial_position = 1
size = Vector2i(800, 600)
wrap_controls = true
always_on_top = true
min_size = Vector2i(800, 600)
script = ExtResource("1_rhl0v")

[node name="Margins" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Columns" type="VBoxContainer" parent="Margins"]
layout_mode = 2

[node name="Rows" type="HBoxContainer" parent="Margins/Columns"]
layout_mode = 2

[node name="SpeechBox" type="VBoxContainer" parent="Margins/Columns/Rows"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentSpeech" type="Label" parent="Margins/Columns/Rows/SpeechBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Let's get toasty!"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Margins/Columns/Rows/SpeechBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CancelSpeech" type="Button" parent="Margins/Columns/Rows/SpeechBox/Buttons"]
layout_mode = 2
text = "Cancel speech"

[node name="GenerateSpeech" type="Button" parent="Margins/Columns/Rows/SpeechBox/Buttons"]
layout_mode = 2
text = "Generate"

[node name="ObsControls" type="VBoxContainer" parent="Margins/Columns/Rows"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ObsScenes" type="HFlowContainer" parent="Margins/Columns/Rows/ObsControls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="Margins/Columns/Rows/ObsControls/ObsScenes"]
layout_mode = 2
text = "TestTestTestTestTestTestTestTestTe"

[node name="Button2" type="Button" parent="Margins/Columns/Rows/ObsControls/ObsScenes"]
layout_mode = 2
text = "Test"

[node name="Button3" type="Button" parent="Margins/Columns/Rows/ObsControls/ObsScenes"]
layout_mode = 2
text = "Test"

[node name="Button4" type="Button" parent="Margins/Columns/Rows/ObsControls/ObsScenes"]
layout_mode = 2
text = "Test"

[node name="Button5" type="Button" parent="Margins/Columns/Rows/ObsControls/ObsScenes"]
layout_mode = 2
text = "Test"

[node name="CloseConfirm" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "Confirm"
initial_position = 1
size = Vector2i(331, 109)
always_on_top = true
ok_button_text = "Yes"
cancel_button_text = "No"

[node name="Label" type="Label" parent="CloseConfirm"]
offset_left = 8.0
offset_top = 8.0
offset_right = 323.0
offset_bottom = 60.0
text = "Do you reallt want to close the Toaster?
;("
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="confirmed" from="CloseConfirm" to="." method="_on_close_confirm_confirmed"]
